--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,16 +38,17 @@ endif()
 
 find_package(Eigen3 3.3.9 REQUIRED)
 find_package(Pangolin REQUIRED)
+find_package(PCL 1.8 REQUIRED  )
 
-FIND_PACKAGE(PCL 1.8 REQUIRED  )
+find_package(Python3 COMPONENTS Interpreter Development REQUIRED)
 
 include_directories(
 ${PROJECT_SOURCE_DIR}
 ${PROJECT_SOURCE_DIR}/include
 ${EIGEN3_INCLUDE_DIR}
 ${Pangolin_INCLUDE_DIRS}
-
 ${PCL_INCLUDE_DIRS}
+${Python3_INCLUDE_DIRS}
 )
 
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
@@ -72,8 +73,7 @@ src/KeyFrameDatabase.cc
 src/Sim3Solver.cc
 src/Initializer.cc
 src/Viewer.cc
-
-        src/PointCloudMapping.cc
+src/PointCloudMapping.cc
 )
 
 target_link_libraries(${PROJECT_NAME}
@@ -82,8 +82,9 @@ ${EIGEN3_LIBS}
 ${Pangolin_LIBRARIES}
 ${PROJECT_SOURCE_DIR}/Thirdparty/DBoW2/lib/libDBoW2.so
 ${PROJECT_SOURCE_DIR}/Thirdparty/g2o/lib/libg2o.so
-
 ${PCL_LIBRARIES}
+${Python3_lIBRARIES}
+/usr/lib/x86_64-linux-gnu/libpython3.8.so
 )
 
 # Build examples
